--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/1_26_24-1.loader.js";
+      var loaderUrl = buildUrl + "/visioncast_1-30-24_1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/1_26_24-1.data",
-        frameworkUrl: buildUrl + "/1_26_24-1.framework.js",
-        codeUrl: buildUrl + "/1_26_24-1.wasm",
+        dataUrl: buildUrl + "/visioncast_1-30-24_1.data",
+        frameworkUrl: buildUrl + "/visioncast_1-30-24_1.framework.js",
+        codeUrl: buildUrl + "/visioncast_1-30-24_1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Michael Stephens",
         productName: "Visioncast Demo",
